Fixed slider on mobile

--- a/src/components/HomeSlider.module.scss
+++ b/src/components/HomeSlider.module.scss
@@ -42,3 +42,9 @@
 .slide2 {
     background-image: url(../img/slide1.png);
 }
+
+@media (max-width: 768px) {
+    .homeSlider {
+        height: calc(100vh - 112px);
+    }
+}
